--- a/app/src/main/res/layout/activity_create_video.xml
+++ b/app/src/main/res/layout/activity_create_video.xml
@@ -6,4 +6,32 @@
     android:layout_height="match_parent"
     tools:context="com.masha.testapplication.CreateVideoActivity">
 
+    <Button
+        android:id="@+id/first_video"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/first_video"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        tools:layout_editor_absoluteY="25dp" />
+
+    <Button
+        android:id="@+id/second_video"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/second_video"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/first_video"/>
+
+    <Button
+        android:id="@+id/post"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/post"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/second_video"
+        android:layout_marginTop="60dp" />
+
 </android.support.constraint.ConstraintLayout>
